force-app/main/default/objects/AssignmentGroup__c/AssignmentGroup__c.object-meta.xml
<CustomObject>
    <label>Grupo de Atribuição</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Grupo de Atribuições</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>