force-app/main/default/objects/AssignmentGroup__c/fields/Media__c.field-meta.xml
<CustomField>
    <fullName>Media__c</fullName>
    <label>Mídia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sbt</fullName>
            </value>
            <value>
                <fullName>allanbarros.com/workshop</fullName>
            </value>
            <value>
                <fullName>lp.acelerai.com.br/fotos</fullName>
            </value>
            <value>
                <fullName>lp.acelerai.com.br/abcfarma</fullName>
            </value>
            <value>
                <fullName>lp.acelerai.com.br/esquenta-aceleraweek</fullName>
            </value>
            <value>
                <fullName>allanbarros.com/livro-prelancamento</fullName>
            </value>
            <value>
                <fullName>lp.acelerai.com.br/vtex-publico</fullName>
            </value>
            <value>
                <fullName>lp.acelerai.com.br/abih-rj</fullName>
            </value>
            <value>
                <fullName>lp.acelerai.com.br/redebem-drogarias</fullName>
            </value>
            <value>
                <fullName>acelerai.com.br/triageapp</fullName>
            </value>
            <value>
                <fullName>lp.acelerai.com.br/g4educacao</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>