force-app/main/default/objects/AssignmentGroup__c/fields/Responsible__c.field-meta.xml
<CustomField>
    <fullName>Responsible__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsável</label>
    <referenceTo>Responsible__c</referenceTo>
    <relationshipLabel>Grupos</relationshipLabel>
    <relationshipName>Grupos</relationshipName>
    <type>Lookup</type>
</CustomField>